# tmg_hmc

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_DOCS.md  CONTRIBUTING.md  MANIFEST.in  README.md  clean.py  hatch_build.py  paper.bib  paper.md  pyproject.toml  pytest.ini  setup.py  tests.ipynb
.github/workflows/: build-wheels.yml  draft-pdf.yml  generate-docs.yml  publish.yml  release.yml  run-tests.yml
docs/source/: api.rst  citing.rst  conf.py  constraints.rst  examples.rst  index.rst  quickstart.rst
examples/: gaussian_process_examples.ipynb  multi-constraint_examples.ipynb  product-constraint_examples.ipynb  single_constraint_examples.ipynb  tests.ipynb
resources/: HMC_exact_soln.nb
solution_computation/: solution_computation.ipynb
src/tmg_hmc/: __init__.py  constraints.py  gpu_utils.py  quad_solns.cpp  quad_solns.h  quad_solns.py  quad_solns_cpp.cpp  quad_solns_cpp.h  sampler.py  solutions.py  utils.py  utils_quartic.py
src/tmg_hmc/compiled/: makefile  utils.cpp  utils.h
src/tmg_hmc/constraints/: __init__.py  base.py  linear.py  quadratic.py
src/tmv_hmc/: constraints.py
tests/: test_linear_constraints.py  test_product_constraint.py  test_quad_solns.py  test_quadratic_constraints.py  test_sampler.py  test_simple_quadratic_constraints.py  test_utils.py
