[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmg_hmc"
version = "0.0.11"
authors = [
  { name="Erik A. Bensen", email="ebensen@andrew.cmu.edu" },
]
description = "This package implements exact HMC sampling for truncated multivariate gaussians with quadratic constraints"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/erik-a-bensen/tmg_hmc"
Repository = "https://github.com/erik-a-bensen/tmg_hmc"
Issues = "https://github.com/erik-a-bensen/tmg_hmc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_* pp*"
build-verbosity = 1
test-requires = "pytest numpy"
test-command = "python -c 'import tmg_hmc; print(tmg_hmc.__version__)'"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
before-build = "yum install -y gcc-c++ make libstdc++-static || apt-get update && apt-get install -y g++ make"

[tool.cibuildwheel.macos]
# Build each architecture separately, not universal wheels
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.9" }
# Set ARCHFLAGS so the makefile knows which arch to build for
environment-pass = ["ARCHFLAGS"]
# Don't require strict arch matching since we only use system libs
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"