[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10"
]
build-backend = "setuptools.build_meta"

[project]
name = "tmg_hmc"
version = "1.0.4"
authors = [
  { name="Erik A. Bensen", email="ebensen@andrew.cmu.edu" },
  { name="Mikael Kuusela", email="mkuusela@andrew.cmu.edu" },
]
description = "This package implements exact HMC sampling for truncated multivariate gaussians with quadratic constraints"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "scipy-stubs"
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0"
]

examples = [
    "jupyter",
    "notebook",
    "matplotlib"
]

test = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis>=6.100",
    "ruff",
    "mypy",
    "pre-commit",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "nbsphinx",
]


dev = ["tmg_hmc[gpu,test,examples,docs]"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long — ruff format handles this

[project.urls]
Homepage = "https://github.com/erik-a-bensen/tmg_hmc"
Repository = "https://github.com/erik-a-bensen/tmg_hmc"
Issues = "https://github.com/erik-a-bensen/tmg_hmc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_* pp*"
build-verbosity = 1
test-requires = ["numpy", "scipy"]
test-command = """python -c "import tmg_hmc; print('tmg_hmc imported successfully')" """

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-build = "yum install -y gcc-c++ make"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.9" }
repair-wheel-command = ""

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.mypy]
[[tool.mypy.overrides]]
module = "tmg_hmc.compiled"
ignore_missing_imports = true